Admin API coupling

--- a/css/user.css
+++ b/css/user.css
@@ -47,6 +47,20 @@ h4, .h4, h5, .h5, h6, .h6 {
   padding-right: 15px;
 }
 
+.alert {
+  position: relative;
+  padding: .75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+}
+
+.alert-danger {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -599,13 +613,12 @@ ol, ul {
 }
 
 .unica-lt-box li {
-  width: 15%;
+  width: 20%;
   float: left;
-  margin-right: 19px;
-  margin-bottom: 15px;
+  padding: 15px;
 }
 
-.unica-lt-box li:hover {
+.unica-lt-box li a:hover {
   box-shadow: 0 0 5px 5px #eee;
 }
 
@@ -640,7 +653,7 @@ ol, ul {
 .unica-reason {
   display: inline-block;
   width: 100%;
-  margin: 30px 0 10px 0;
+  margin: 30px 0 30px 0;
 }
 
 
@@ -1340,6 +1353,259 @@ ol, ul {
   .carousel-indicators {
     bottom: 20px;
   }
+}
+
+/* teacher login */
+.container .login-wrap {
+  width: 100%;
+  margin-top: 50px;
+  display: inline-block;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.container .login-wrap .loginpage-left-banner {
+  float: left;
+  width: 45%;
+  height: 402.67px;
+  margin: 90px 160px 90px 0px;
+}
+
+img {
+  vertical-align: middle;
+  border-style: none;
+}
+
+.container .login-wrap .loginpage-left-banner__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.container .login-wrap .loginpage-form {
+  float: left;
+  width: 40%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 70px 72px;
+  background: #ffffff;
+  border: 2px solid #eff3fd;
+  box-sizing: border-box;
+  -webkit-box-shadow: 0px 25px 50px rgba(8, 55, 129, 0.1);
+  box-shadow: 0px 25px 50px rgba(8, 55, 129, 0.1);
+  border-radius: 10px;
+}
+
+.container .login-wrap .loginpage-form__title {
+  color: #f26c4f;
+  font-family: 'roboto';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 26px;
+  margin-bottom: 30px;
+}
+
+.text-center {
+  text-align: center!important;
+}
+
+.container .login-wrap .loginpage-form .form-group {
+  margin-bottom: 40px;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + .75rem + 2px);
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.container .login-wrap .loginpage-form__input {
+  width: 100%;
+  border-bottom: 1px solid #aaa;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-radius: 0px;
+  outline-style: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.container .login-wrap .loginpage-form .has-eye {
+  position: relative;
+  cursor: pointer;
+}
+
+.container .login-wrap .loginpage-form .has-eye .eye {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  -webkit-transform: translatey(-50%);
+  transform: translatey(-50%);
+}
+
+.float-left {
+  float: left!important;
+}
+
+label {
+  display: inline-block;
+  margin-bottom: .5rem;
+}
+
+.container .login-wrap .loginpage-form__remember-checkbox {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding-left: 25px;
+  color: #040e30;
+  font-family: 'roboto';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+input[type=checkbox], input[type=radio] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+.container .login-wrap .loginpage-form__remember-checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.container .login-wrap .loginpage-form__remember-checkbox .login-checkmark {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  height: 16px;
+  width: 16px;
+  background-color: #7f8b9e;
+}
+
+.container .login-wrap .loginpage-form__remember-checkbox input:checked ~ .login-checkmark {
+  background-color: #2196f3;
+}
+
+.container .login-wrap .loginpage-form__remember-checkbox .login-checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+  left: 6px;
+  top: 3px;
+  width: 5px;
+  height: 9px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.container .login-wrap .loginpage-form__remember-checkbox input:checked ~ .login-checkmark:after {
+  display: block;
+}
+
+.container .login-wrap .loginpage-form__button-submit {
+  color: #ffffff;
+  margin-bottom: 16px;
+  width: 100%;
+  background: #f26c4f;
+  border-radius: 8px;
+  padding: 11px 29.7px;
+  font-family: 'roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.container .login-wrap .loginpage-form__button-submit:hover {
+  background-color: #e3664b;
+}
+
+.forgetpass {
+  float: right;
+  font-size: 16px;
+}
+
+.forgetpass a {
+  color: #f26c4f;
+  text-decoration: none;
+}
+
+.forgetpass a:hover {
+  text-decoration: underline;
+}
+
+.user-role {
+  margin: 15px;
+  padding-left: 20px;
+  margin-bottom: 30px;
+}
+
+.radio-inline {
+  position: relative;
+  display: inline-block;
+  padding-left: 20px;
+  margin-left: 10px;
+  margin-bottom: 0;
+  font-weight: 400;
+  vertical-align: middle;
+  cursor: pointer;
+  padding-right: 30px;
+}
+
+.radio-inline input[type=radio] {
+  position: absolute;
+  margin-top: 2px;
+  margin-left: -20px;
+}
+
+.block_course_list .footer {
+  margin-top: 5px;
+}
+
+.block .footer {
+  display: block;
+  padding: 3px 5px;
+  margin-bottom: 4px;
+}
+
+.block .content a:hover {
+  color: #c02424;
+  text-decoration: underline;
+}
+
+#password-confirm-message {
+  display: inline;
+  float: right;
 }
 
 @media only screen and (min-width: 992px) {
