--- a/css/user.css
+++ b/css/user.css
@@ -1,5 +1,5 @@
 body {
-  font-family:  Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Noto Sans,Arial,sans-serif;;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
@@ -11,7 +11,6 @@ html, body, div, span, applet, object, iframe, p, blockquote, pre, a, abbr, acro
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
 }
 
@@ -106,6 +105,11 @@ h4, .h4, h5, .h5, h6, .h6 {
   float: left;
 }
 
+
+.col-lg-1 {
+  width: 8.33333333%;
+}
+
 .col-lg-2 {
   width: 16.66666667%;
 }
@@ -122,7 +126,11 @@ h4, .h4, h5, .h5, h6, .h6 {
   width: 41.66666667%;
 }
 
-.col-sm-6 {
+.col-lg-7 {
+  width: 58.33333333%;
+}
+
+.col-lg-6 {
   width: 50%;
 }
 
@@ -164,6 +172,11 @@ button, input, optgroup, select, textarea {
   color: inherit;
   font: inherit;
   margin: 0;
+  outline: none;
+}
+
+input:focus {
+  border: 1px solid #f26c4f;
 }
 
 input {
@@ -770,7 +783,7 @@ ol, ul {
 
 .u-cate-list p {
   color: #f67052;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   border-bottom: 1px solid #d7d7d7;
   margin-bottom: 10px;
@@ -778,7 +791,7 @@ ol, ul {
 }
 
 .u-cate-list ul li {
-  line-height: 35px;
+  line-height: 40px;
 }
 
 .u-cate-list ul li .active {
@@ -795,7 +808,8 @@ ol, ul {
 
 .u-cate-list i {
   width: 30px;
-  font-size: 18px;
+  font-size: 20px;
+  padding-bottom: 3px;
   text-align: center;
   color: #f67052;
   vertical-align: middle;
@@ -1020,7 +1034,7 @@ ol, ul {
 }
 
 .tab-detail li ul li a{
-  font-size: 18px;
+  font-size: 16 px;
 }
 
 .tab-detail li ul li:last-child {
@@ -1075,7 +1089,7 @@ ol, ul {
   border: 0;
 }
 
-.u-learn-what, .u-des-course, .u-list-course, .u-course-plus, .u-rate-hv, .u-cm-hv, .u-combo-buy, .u-face-cm, .u-course-teacher {
+.u-learn-what, .u-des-course, .u-list-course, .u-course-plus, .u-rate-hv, .u-cm-hv, .u-combo-buy, .u-face-cm, .u-course-teacher, .u-user-profile {
   background: #fff;
   border: 1px solid #d7d7d7;
   border-radius: 3px;
@@ -1085,17 +1099,17 @@ ol, ul {
   padding-bottom: 10px;
 }
 
-.u-course-teacher {
+.u-course-teacher, .u-user-profile {
   margin-top: 0;
 }
 
-.u-learn-what h3, .u-des-course h2, .u-list-course h2, .u-course-plus h3, .u-course-teacher h3, .u-combo-buy h3, .u-rate-hv h3, .u-cm-hv h3 {
+.u-learn-what h3, .u-des-course h2, .u-list-course h2, .u-course-plus h3, .u-course-teacher h3, .u-combo-buy h3, .u-rate-hv h3, .u-cm-hv h3, .u-user-profile h3{
   font-size: 20px;
   font-weight: bold;
   padding: 15px;
 }
 
-.u-combo-buy h3, .u-cm-hv h3, .u-rate-hv h3, .u-course-teacher h3, .u-list-course h2, .u-des-course h2 {
+.u-combo-buy h3, .u-cm-hv h3, .u-rate-hv h3, .u-course-teacher h3, .u-list-course h2, .u-des-course h2, .u-user-profile h3 {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px;
@@ -1258,7 +1272,7 @@ ol, ul {
   padding-left: 30px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 22px;
+  font-size: 18px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -1273,7 +1287,7 @@ ol, ul {
 
 .checkmark {
   position: absolute;
-  top: 2px;
+  top: 1px;
   left: 0;
   height: 20px;
   width: 20px;
@@ -1320,39 +1334,6 @@ ol, ul {
 
 .tab-content {
   display: none;
-}
-
-@media only screen and (min-width: 768px) {
-  .container {
-    width: 750px;
-  }
-
-  .navbar-form {
-    width: auto;
-    border: 0;
-    margin-left: 0;
-    margin-right: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-  }
-
-  .form-inline .form-control {
-    display: inline-block;
-    width: auto;
-    vertical-align: middle;
-  }
-
-  .navbar-form .form-control {
-    display: inline-block;
-    width: auto;
-    vertical-align: middle;
-  }
-
-  .carousel-indicators {
-    bottom: 20px;
-  }
 }
 
 /* teacher login */
@@ -1603,9 +1584,506 @@ input[type=checkbox], input[type=radio] {
   text-decoration: underline;
 }
 
-#password-confirm-message {
+.confirm-message {
   display: inline;
   float: right;
+}
+
+/* account wrap */
+.account-wrap {
+  position: relative;
+}
+
+.account-item {
+  cursor: pointer;
+}
+
+.account-item .image {
+  width: 45px;
+  height: 45px;
+  float: left;
+  overflow: hidden;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+
+.account-item .image img {
+  width: 100%;
+}
+
+.account-item > .content {
+  margin-left: 45px;
+  padding: 13px 0;
+  padding-left: 12px;
+}
+
+.account-item > .content > a {
+  color: #333;
+  text-transform: capitalize;
+  font-weight: 500;
+}
+
+.account-item > .content > a:hover {
+  text-decoration: none;
+}
+
+.account-dropdown {
+  min-width: 305px;
+  position: absolute;
+  top: 58px;
+  right: 0;
+  background: #fff;
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  -o-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  -webkit-transform-origin: right top;
+  -moz-transform-origin: right top;
+  -ms-transform-origin: right top;
+  -o-transform-origin: right top;
+  transform-origin: right top;
+  z-index: 3;
+}
+
+.mess-dropdown:before, .email-dropdown:before, .notifi-dropdown:before, .setting-dropdown:before {
+  content: '';
+  display: block;
+  width: 19px;
+  height: 19px;
+  border-bottom: 9px solid #fff;
+  border-top: 9px solid transparent;
+  border-left: 9px solid transparent;
+  border-right: 9px solid transparent;
+  position: absolute;
+  top: -17px;
+  left: 55px;
+  z-index: 3;
+}
+
+.account-dropdown .info {
+  padding: 15px;
+  border-top: 1px solid #f5f5f5;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+
+.account-dropdown .info .image {
+  float: left;
+  height: 65px;
+  width: 65px;
+  overflow: hidden;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+
+.account-dropdown .info .content {
+  margin-left: 65px;
+  padding: 11px 0;
+  padding-left: 12px;
+}
+
+.account-dropdown .info .content .name {
+  line-height: -webkit-calc(20/16);
+  line-height: -moz-calc(20/16);
+  line-height: calc(20/16);
+}
+
+.account-dropdown .info .content .name a {
+  color: #333;
+  font-size: 20px;
+  text-transform: capitalize;
+}
+
+.account-dropdown .info .content .email {
+  font-size: 15px;
+  color: #999;
+  line-height: -webkit-calc(20/13);
+  line-height: -moz-calc(20/13);
+  line-height: calc(20/13);
+}
+
+.content h5 {
+  margin-bottom: 0;
+}
+
+.account-dropdown__body {
+  padding: 12px 0;
+}
+
+.account-dropdown__item a {
+  display: block;
+  color: #333;
+  padding: 15px 25px;
+  font-size: 14px;
+}
+
+.account-dropdown__item:hover {
+  background-color: #ddd;
+}
+
+.account-dropdown__item a:hover {
+  text-decoration: none;
+}
+
+.account-dropdown__item a i {
+  line-height: 1;
+  margin-right: 20px;
+  font-size: 18px;
+  vertical-align: middle;
+}
+
+.zmdi-account:before {
+  content: '\f207';
+}
+
+.zmdi-settings:before {
+  content: '\f1c6';
+}
+
+.zmdi-money-box:before {
+  content: '\f198';
+}
+
+.account-dropdown__footer {
+  border-top: 1px solid #f2f2f2;
+}
+
+.account-dropdown__footer:hover {
+  background-color: #ccc;
+}
+
+.account-dropdown__footer a {
+  display: block;
+  color: #333;
+  padding: 15px 25px;
+  font-size: 14px;
+}
+
+.account-dropdown__footer:hover {
+  background-color: ;
+}
+
+.account-dropdown__footer a:hover {
+  text-decoration: none;
+}
+
+.account-dropdown__footer a i {
+  line-height: 1;
+  margin-right: 20px;
+  font-size: 18px;
+  vertical-align: middle;
+}
+
+.zmdi-power:before {
+  content: '\f1af';
+}
+
+.show-dropdown .js-dropdown {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+}
+
+/* user profile */
+.user-profile-update, .user-change-password {
+  padding-top: 30px;
+}
+.user-profile-update .form-group, .user-change-password .form-group {
+  padding-left: 30px;
+}
+
+.user-change-password .col-lg-3 {
+  width: 20%;
+}
+
+.user-change-password .col-lg-7 {
+  width: 53.3333333%
+}
+
+.user-change-password .confirm-message {
+  padding: 8px 0;
+}
+
+.fl-left {
+  float: left;
+}
+
+.profile-label {
+  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.profile-text {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 5px;
+}
+
+.save-change-btn {
+  background-color: #0468D1;
+  border-color: #0468D1;
+  color: #fff;
+  float: right;
+}
+
+.save-change-btn:hover {
+  background-color: #045bb7;
+}
+
+.user-nav i {
+  padding-bottom: 6px;
+}
+
+/* reset password */
+.resetpass-wrap {
+  max-width: 540px;
+  padding-top: 8vh;
+  padding-bottom: 6vh;
+  margin: 0 auto;
+}
+
+.resetpass-content {
+  background: #fff;
+  padding: 30px 30px 20px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+}
+
+.resetpass-title {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.resetpass-form .form-group label {
+  font-size: 15px;
+  display: block;
+}
+
+.resetpass-email {
+  line-height: 35px;
+  width: 100%;
+  border: 1px solid #e5e5e5;
+  font-size: 14px;
+  color: #666;
+  padding: 0 17px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.resetpass-btn {
+  line-height: 35px;
+  font-size: 15px;
+  padding: 0 35px;
+  text-transform: uppercase;
+  color: #fff;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  background: #63c76a;
+  border: 1px solid #63c76a;
+  margin-bottom: 20px;
+}
+
+.resetpass-btn:hover {
+  background-color: #5ab360;
+  border-color: #5ab360;
+}
+
+/* teacher schedule */
+.quizitem {
+  float: left;
+  width: 100%;
+  margin-top: 1px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.quizitem .quizitem-heading {
+  padding: 5px 0;
+  padding-left: 5px;
+  padding-right: 15px;
+  background-color: #f26c4f;
+}
+
+.questions-no {
+  float: left;
+  margin-top: 9px;
+  width: 30px;
+  margin-left: -30px;
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: bold;
+}
+
+.right {
+  float: right;
+}
+
+.quizitem.open .quizitem-heading .indicator {
+  background-color: #fff;
+  cursor: pointer;
+  color: #000;
+  margin-top: 5px;
+}
+
+.quizitem.open .quizitem-heading .indicator:hover {
+  background-color: #ddd;
+}
+
+.quizitem .quizitem-heading .indicator:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+
+.quizitem .quizitem-heading .indicator {
+  width: 25px;
+  height: 25px;
+  border-radius: 4px;
+  padding: 5px;
+  text-align: center;
+  position: relative;
+  background-color: #fff;
+  color: #000;
+  display: inline-block;
+  transform: translate(.3s);
+  -webkit-transform: translate(.3s);
+}
+
+.quizitem .quizitem-heading .indicator .fa {
+  vertical-align: top;
+  font-weight: bold;
+  font-size: 16px;
+  padding-top: 2px;
+}
+
+.quizitem-heading p {
+  color: #fff;
+  padding: 10px;
+}
+
+.quizitem-heading .right {
+  margin-top: 5px;
+}
+
+.clear:after, .all:after, #main-wrap:after, #footer:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.quizitem .quizitem-body {
+  padding: 15px;
+  display: none;
+}
+
+.lesson-description {
+  margin-bottom: 20px;
+}
+
+.form-row {
+  margin-bottom: 10px;
+}
+
+.quizitem .quizitem-body textarea {
+  height: 80px;
+}
+
+.update-question {
+  padding: 20px 20px;
+  text-align: center;
+}
+
+.update-question-btn {
+  color: #fff;
+  background-color: #2caee1;
+  font-size: 14px;
+  padding: 5px 10px;
+}
+
+.update-question-btn:hover {
+  background-color: #2ba0ce;
+}
+
+.lb {
+  margin-bottom: 20px;
+}
+
+.preview-video iframe {
+  width: 100%;
+  height: 500px;
+}
+
+.show {
+  display: block !important;
+}
+
+.expand {
+  transform: rotate(-180deg);
+  -webkit-transform: rotate(-180deg);
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+
+  .navbar-form {
+    width: auto;
+    border: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+
+  .form-inline .form-control {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
+  }
+
+  .navbar-form .form-control {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
+  }
+
+  .carousel-indicators {
+    bottom: 20px;
+  }
 }
 
 @media only screen and (min-width: 992px) {
