--- a/css/user.css
+++ b/css/user.css
@@ -1875,7 +1875,7 @@ input[type=checkbox], input[type=radio] {
   display: block;
 }
 
-.resetpass-email {
+.resetpass-input {
   line-height: 35px;
   width: 100%;
   border: 1px solid #e5e5e5;
